--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<problem-spring-web.version>0.29.1</problem-spring-web.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -84,6 +86,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>problem-spring-web-starter</artifactId>
+			<version>${problem-spring-web.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -104,6 +111,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>springboot-nextjs-backend</finalName>
 	</build>
 
 </project>
